--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>vue2-resume</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>resume</title>
+
+  <!--cdn-->
+  <link href="https://cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+<div id="app"></div>
+  <!-- built files will be auto injected -->
+
+  <!--cdn-->
+  <script src="https://cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.js"></script>
+
+</body>
 </html>
