--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>resume</title>
 
   <!--cdn-->
-  <link href="https://cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.css" rel="stylesheet">
+  <link href="//cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.css" rel="stylesheet">
 
 </head>
 
@@ -14,7 +14,7 @@
   <!-- built files will be auto injected -->
 
   <!--cdn-->
-  <script src="https://cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.js"></script>
+  <script src="//cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.js"></script>
 
 </body>
 </html>
