update - 替换无效CDN: 更新 semantic-UI 为 七牛CDN.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>resume</title>
 
   <!--cdn-->
-  <link href="//cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.css" rel="stylesheet">
+  <link href="https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
 
 </head>
 
@@ -14,7 +14,17 @@
   <!-- built files will be auto injected -->
 
   <!--cdn-->
-  <script src="//cdn.bootcss.com/semantic-ui/2.2.11/semantic.min.js"></script>
+  <script src="https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.js"></script>
+
+  <!--可选CDN列表:-->
+  <!---->
+    <!--https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js-->
+    <!--https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css-->
+
+    <!--https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.css-->
+    <!--https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.js-->
+  <!---->
+
 
 </body>
 </html>
